--- a/msu_cpp_spring_2022/01/Makefile
+++ b/msu_cpp_spring_2022/01/Makefile
@@ -3,6 +3,7 @@ FLAGS=-std=c++2a -Wall -pedantic -Wextra -Werror
 TEST_LIBS=-lgtest_main -lgtest -lpthread
 
 all: main test
+	./test
 	
 main: main.cpp allocator.o
 	$(CC) $(FLAGS) allocator.o main.cpp -o main
@@ -12,4 +13,3 @@ allocator.o: allocator.cpp allocator.h
 
 test: allocator.o test.cpp
 	$(CC) $(FLAGS) allocator.o test.cpp -o test $(TEST_LIBS)
-
